ci: pin FTP deploy action to v4.3.5

--- a/.github/workflows/deploy-hostinger.yml
+++ b/.github/workflows/deploy-hostinger.yml
@@ -1,70 +1,1 @@
-name: Deploy to Hostinger
-
-on:
-  push:
-    branches: [ "main" ]
-  workflow_dispatch:
-
-concurrency:
-  group: hostinger-deploy-${{ github.ref }}
-  cancel-in-progress: true
-
-jobs:
-  build-and-deploy:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Prepare deploy package (dist/)
-        shell: bash
-        run: |
-          set -e
-          mkdir -p dist
-
-          # Root .htaccess for clean URLs on Hostinger
-          cat > dist/.htaccess <<'HTACC'
-          RewriteEngine On
-          RewriteBase /
-
-          # Serve existing files/dirs immediately
-          RewriteCond %{REQUEST_URI} !^/gang-de-monstres-standalone/
-          RewriteCond %{REQUEST_FILENAME} -f [OR]
-          RewriteCond %{REQUEST_FILENAME} -d
-          RewriteRule ^ - [L]
-
-          # Map assets and API to the app folder
-          RewriteRule ^assets/(.*)$ gang-de-monstres-standalone/assets/$1 [L]
-          RewriteRule ^api/(.*)$ gang-de-monstres-standalone/api/$1 [L,QSA]
-
-          # Home route
-          RewriteRule ^$ gang-de-monstres-standalone/public/ [L]
-
-          # Fallback: everything else from app public
-          RewriteRule ^(.*)$ gang-de-monstres-standalone/public/$1 [L,QSA]
-          HTACC
-
-          # Copy the repository into a subfolder as deployed structure
-          rsync -a --delete --exclude '.git' ./ dist/gang-de-monstres-standalone/
-
-          # Ensure protection for sensitive dirs (idempotent)
-          mkdir -p dist/gang-de-monstres-standalone/config dist/gang-de-monstres-standalone/includes
-          echo 'Require all denied' > dist/gang-de-monstres-standalone/config/.htaccess
-          echo 'Require all denied' > dist/gang-de-monstres-standalone/includes/.htaccess
-
-      - name: Deploy via FTPS to Hostinger
-        uses: SamKirkland/FTP-Deploy-Action@v4
-        with:
-          server: ${{ secrets.FTP_SERVER }}
-          username: ${{ secrets.FTP_USERNAME }}
-          password: ${{ secrets.FTP_PASSWORD }}
-          protocol: ftps
-          port: 21
-          local-dir: dist/
-          server-dir: public_html/
-          exclude: |
-            **/.git*
-            **/.github/**
-            **/node_modules/**
-            **/.DS_Store
-
+﻿name: Deploy to Hostingeron:  push:    branches: [ "main" ]  workflow_dispatch:concurrency:  group: hostinger-deploy-${{ github.ref }}  cancel-in-progress: truejobs:  build-and-deploy:    runs-on: ubuntu-latest    steps:      - name: Checkout repository        uses: actions/checkout@v4      - name: Prepare deploy package (dist/)        shell: bash        run: |          set -e          mkdir -p dist          # Root .htaccess for clean URLs on Hostinger          cat > dist/.htaccess <<'HTACC'          RewriteEngine On          RewriteBase /          # Serve existing files/dirs immediately          RewriteCond %{REQUEST_URI} !^/gang-de-monstres-standalone/          RewriteCond %{REQUEST_FILENAME} -f [OR]          RewriteCond %{REQUEST_FILENAME} -d          RewriteRule ^ - [L]          # Map assets and API to the app folder          RewriteRule ^assets/(.*)$ gang-de-monstres-standalone/assets/$1 [L]          RewriteRule ^api/(.*)$ gang-de-monstres-standalone/api/$1 [L,QSA]          # Home route          RewriteRule ^$ gang-de-monstres-standalone/public/ [L]          # Fallback: everything else from app public          RewriteRule ^(.*)$ gang-de-monstres-standalone/public/$1 [L,QSA]          HTACC          # Copy the repository into a subfolder as deployed structure          rsync -a --delete --exclude '.git' ./ dist/gang-de-monstres-standalone/          # Ensure protection for sensitive dirs (idempotent)          mkdir -p dist/gang-de-monstres-standalone/config dist/gang-de-monstres-standalone/includes          echo 'Require all denied' > dist/gang-de-monstres-standalone/config/.htaccess          echo 'Require all denied' > dist/gang-de-monstres-standalone/includes/.htaccess      - name: Deploy via FTPS to Hostinger        uses: SamKirkland/FTP-Deploy-Action@v4.3.5        with:          server: ${{ secrets.FTP_SERVER }}          username: ${{ secrets.FTP_USERNAME }}          password: ${{ secrets.FTP_PASSWORD }}          protocol: ftps          port: 21          local-dir: dist/          server-dir: public_html/          exclude: |            **/.git*            **/.github/**            **/node_modules/**            **/.DS_Store
