ci: set AddDefaultCharset UTF-8 in root .htaccess to prevent mojibake

--- a/.github/workflows/deploy-hostinger.yml
+++ b/.github/workflows/deploy-hostinger.yml
@@ -24,6 +24,7 @@ jobs:
 
           # Root .htaccess for clean URLs on Hostinger
           cat > dist/.htaccess <<'HTACC'
+          AddDefaultCharset UTF-8
           RewriteEngine On
           RewriteBase /
 
