--- a/.github/workflows/deploy-hostinger.yml
+++ b/.github/workflows/deploy-hostinger.yml
@@ -77,14 +77,22 @@ jobs:
           echo 'Require all denied' > dist/gang-de-monstres-standalone/config/.htaccess
           echo 'Require all denied' > dist/gang-de-monstres-standalone/includes/.htaccess
 
+      - name: List dist contents (debug)
+        run: |
+          echo "=== Contents of dist/ ==="
+          ls -la dist/
+          echo "=== Contents of dist/gang-de-monstres-standalone/ ==="
+          ls -la dist/gang-de-monstres-standalone/ | head -20
+
       - name: Deploy via SFTP to Hostinger
-        uses: wlixcc/SFTP-Deploy-Action@v1.2.4
+        uses: SamKirkland/FTP-Deploy-Action@v4.3.5
         with:
           server: ${{ secrets.SSH_SERVER }}
           username: ${{ secrets.SSH_USERNAME }}
           password: ${{ secrets.SSH_PASSWORD }}
           port: 65002
-          local_path: './dist/*'
-          remote_path: './public_html/'
-          sftpArgs: '-o ConnectTimeout=60'
+          protocol: sftp
+          local-dir: ./dist/
+          server-dir: ./public_html/
+          dangerous-clean-slate: true
 
