--- a/.github/workflows/deploy-hostinger.yml
+++ b/.github/workflows/deploy-hostinger.yml
@@ -84,14 +84,15 @@ jobs:
           echo "=== Contents of dist/gang-de-monstres-standalone/ ==="
           ls -la dist/gang-de-monstres-standalone/ | head -20
 
-      - name: Deploy via SCP to Hostinger
-        uses: appleboy/scp-action@v0.1.7
-        with:
-          host: ${{ secrets.SSH_SERVER }}
-          username: ${{ secrets.SSH_USERNAME }}
-          password: ${{ secrets.SSH_PASSWORD }}
-          port: 65002
-          source: "dist/.htaccess,dist/gang-de-monstres-standalone"
-          target: "./public_html"
-          strip_components: 1
+      - name: Install sshpass
+        run: sudo apt-get install -y sshpass
+
+      - name: Deploy via rsync to Hostinger
+        env:
+          SSH_PASSWORD: ${{ secrets.SSH_PASSWORD }}
+        run: |
+          sshpass -p "$SSH_PASSWORD" rsync -avz --delete \
+            -e "ssh -p 65002 -o StrictHostKeyChecking=no" \
+            dist/ \
+            ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_SERVER }}:~/public_html/
 
